--- a/tcss460-html-tutorial/index.html
+++ b/tcss460-html-tutorial/index.html
@@ -8,9 +8,20 @@
         <meta http-equiv="Content-Language" content="en">
         <meta name="web_author" content="Preston Sia">
         <meta name="description" content="TCSS 460 HTML Tutorial from MDM Docs">
+
+        <style>
+            body {
+                font-family: Arial, Helvetica, sans-serif;
+                color: #333333;
+            }
+
+            h1, h2 {
+                color: #4b2e83; /* Go Huskies! */
+            }
+        </style>
     </head>
 
     <body>
-        
+        <h1>Preston Sia - TCSS 460 HTML Tutorial</h1>
     </body>
 </html>
