Build index of tests

--- a/tcss460-html-tutorial/audio-video/audio-video-tasks-multi.html
+++ b/tcss460-html-tutorial/audio-video/audio-video-tasks-multi.html
@@ -25,7 +25,7 @@
             This browser does not support HTML5 audio.
         </audio>
 
-        <h2>Video embed</h2>
+        <h2>Task 2 - Video embed</h2>
         <video
             controls
             width="320"
