--- a/tcss460-html-tutorial/index.html
+++ b/tcss460-html-tutorial/index.html
@@ -23,5 +23,46 @@
 
     <body>
         <h1>Preston Sia - TCSS 460 HTML Tutorial</h1>
+        <h2>Tutorial index</h2>
+        <div>
+            <h3>Text Basics</h3>
+            <ul>
+                <li><a href="html-texts-basics/basics-task1.html">Texts Task 1</a></li>
+                <li><a href="html-texts-basics/basics-task2.html">Texts Task 2</a></li>
+                <li><a href="html-texts-basics/basics-task3.html">Texts Task 3</a></li>
+                <li><a href="html-texts-basics/basics-task4.html">Texts Task 4</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Advanced Text</h3>
+            <ul>
+                <li><a href="advanced-text/advanced-task1.html">Advanced Text Task 1</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Links</h3>
+            <ul>
+                <li><a href="links/links-task1.html">Texts Task 1</a></li>
+                <li><a href="links/links-task2-3.html">Texts Task 2 &amp; 3</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Images</h3>
+            <ul>
+                <li><a href="images-tests/images-task-multi.html">Images Tasks 1-3</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Audio and Video</h3>
+            <ul>
+                <li><a href="audio-video/audio-video-tasks-multi.html">Audio &amp; Video Task 1-2</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Forms</h3>
+            <ul>
+                <li><a href="forms/form-tasks.html">Form Tasks 1-6</a></li>
+            </ul>
+        </div>
     </body>
 </html>
