Update text for links link

--- a/tcss460-html-tutorial/index.html
+++ b/tcss460-html-tutorial/index.html
@@ -42,8 +42,8 @@
         <div>
             <h3>Links</h3>
             <ul>
-                <li><a href="links/links-task1.html">Texts Task 1</a></li>
-                <li><a href="links/links-task2-3.html">Texts Task 2 &amp; 3</a></li>
+                <li><a href="links/links-task1.html">Links Task 1</a></li>
+                <li><a href="links/links-task2-3.html">Links Task 2 &amp; 3</a></li>
             </ul>
         </div>
         <div>
